[FIX] website: prevent page flickering when modal is opened
Commit [1] introduced a flickering when any modal was opened on the
frontend. Indeed, it introduced the possibility to go into "fullscreen"
mode, which makes the Odoo UI navbar and sidebar disappear. This is
animated: the padding of the `<body/>` element is using a CSS
transition... but when a Bootstrap modal opens, the padding-right is
changed to compensate the scrollbar removal. This change now being
animated, it creates a flickering.

A generic solution was made: only animate what is animated for the
duration of the fullscreen mode switch.

[1]: https://github.com/odoo/odoo/commit/0b0690a3934cedcab0d5e34373e8d40c2ab25660

closes odoo/odoo#55204

--- a/addons/website/static/src/scss/website.ui.scss
+++ b/addons/website/static/src/scss/website.ui.scss
@@ -8,29 +8,30 @@ body {
     // Set frontend direction that will be flipped with
     // rtlcss for right-to-left text direction.
     direction: ltr;
-    transition: padding 0.35s;
 }
 body.o_connected_user {
     padding-top: $o-navbar-height!important;
 
+    &.o_fullscreen_transition {
+        transition: padding 0.35s;
+
+        #oe_main_menu_navbar, #web_editor-top-edit, #oe_snippets {
+            transition: transform 0.35s !important;
+        }
+    }
     &.o_fullscreen {
         padding-top: 0 !important;
 
         &.editor_enable.editor_has_snippets {
             padding-left: 0 !important;
         }
-
         #oe_main_menu_navbar, #web_editor-top-edit {
             transform: translateY(-100%);
         }
-
         #oe_snippets {
             transform: translateX(-100%);
         }
     }
-}
-#oe_main_menu_navbar, #web_editor-top-edit, #oe_snippets {
-    transition: transform 0.35s !important;
 }
 
 // MAIN MENU STYLE (added above navbar.scss)
